update submodules url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "jush"]
 	path = externals/jush
-	url = git://github.com/vrana/jush
+	url = git@github.com:vrana/jush.git
 [submodule "JsShrink"]
 	path = externals/JsShrink
-	url = git://github.com/vrana/JsShrink
+	url = git@github.com:vrana/JsShrink.git
 [submodule "designs/hydra"]
 	path = designs/hydra
-	url = https://github.com/Niyko/Hydra-Dark-Theme-for-Adminer
+	url = https://github.com/Niyko/Hydra-Dark-Theme-for-Adminer.git
 [submodule "designs/pepa-linha-dark"]
 	path = designs/pepa-linha-dark
-	url = https://github.com/pepa-linha/Adminer-Design-Dark/
+	url = https://github.com/pepa-linha/Adminer-Design-Dark.git
